k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuningprototype
  labels:
    app: tuningprototype
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tuningprototype
  template:
    metadata:
      labels:
        app: tuningprototype
    spec:
      serviceAccountName: tuningprototype
      containers:
        - name: tuningprototype
          image: 102001485020.dkr.ecr.ap-southeast-2.amazonaws.com/22ng/tuningprototype:__IMAGE_TAG__
          ports:
            - containerPort: 8080
          env: []
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "300m"
              memory: "300Mi"
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
