k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tuningprototype
spec:
  selector:
    app: tuningprototype
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
